--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -9,7 +9,7 @@
 
           {% include navigation.html %}
 
-        <main class="helvetica has-menu" style="margin:0 auto;line-height:1.6;max-width:34rem;">
+        <main class="note px-2 md:px-0" style="min-height: calc(100vh - 150px);" itemprop="mainEntity" itemscope="" itemtype="http://schema.org/BlogPosting">
           {{ content }}
         </main>
      </div>
