--- a/_includes/head.html
+++ b/_includes/head.html
@@ -1,18 +1,18 @@
-<head></head>
+<head>
     
     <meta charset="utf-8">
     <meta content="width=device-width, initial-scale=1.0, maximum-scale=5.0" name="viewport">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta http-equiv="Accept-CH" content="DPR, Width">
     <meta name="generator" content="alto.so">
-    <title>anton's site</title>
-    <meta property="og:title" content="anton's site">
-    <meta name="description" content="anton's site">
-    <meta property="og:description" content="anton's site">
-    <meta name="twitter:description" content="anton's site">
-    <link rel="canonical" href="https://podviaznikov.com/">
-    <meta property="og:url" content="https://podviaznikov.com/">
-    <meta name="author" content="anton">
+    <title>bear's site</title>
+    <meta property="og:title" content="bear's site">
+    <meta name="description" content="bear's site">
+    <meta property="og:description" content="bear's site">
+    <meta name="twitter:description" content="bear's site">
+    <link rel="canonical" href="/">
+    <meta property="og:url" content="/">
+    <meta name="author" content="Bear">
     <link rel="apple-touch-icon" sizes="57x57" href="https://cdn.alto.so/favicons/apple-icon-57x57.png">
     <link rel="apple-touch-icon" sizes="60x60" href="https://cdn.alto.so/favicons/apple-icon-60x60.png">
     <link rel="apple-touch-icon" sizes="72x72" href="https://cdn.alto.so/favicons/apple-icon-72x72.png">
@@ -30,7 +30,7 @@
     <meta name="msapplication-TileImage" content="https://cdn.alto.so/favicons/ms-icon-144x144.png">
     <meta name="theme-color" content="#ffffff">
 
-    <link rel="stylesheet" href="https://cdn.alto.so/css/styles.css"/>
+    <link rel="stylesheet" href="/css/styles.css"/>
     <link rel="alternate" type="application/rss+xml" title="RSS Feed for anton's site" href="/feed.xml"></link>
     <meta name="view-transition" content="same-origin" />
     <style>
