--- a/_includes/navigation.html
+++ b/_includes/navigation.html
@@ -6,10 +6,13 @@
      <nav class="md:flex space-x-2 py-0 pl-0 pr-0">
          <ul class="m-0">
                <li class="dib v-top">
-                   <a itemProp="url" href=/about class='dib link dim py-0 px-0 pr-2'>about</a>
+                   <a itemProp="url" href=/about  class='dib link dim py-0 px-0 pr-2'>about</a>
               </li>
              <li class="dib v-top">
                   <a itemProp="url" href=/myblog class='dib link dim py-0 px-0 pr-2'>follow me</a>
+              </li>
+              <li class="dib v-top">
+                  <a itemProp="url" href=/thenotes  class='dib link dim py-0 px-0 pr-2'>notes</a>
               </li>
           </ul>
       </nav>
