--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,4 +1,4 @@
 <footer class="px-2 md:px-0 mt-8 mb-2 custom-domain" id="footer">
-    <small class="db text-sm block"><span>ʕง•ᴥ•ʔง</span> <span>© 2024 </span></small>
-    
-    <small class="text-sm block mt-2">Made with <a class="link" href="/box">Terminal</a> and Macbook</small></footer>
+  <small class="db text-sm block"><span>ʕง•ᴥ•ʔง</span> <span>© 2024 </span></small>
+  <small class="text-sm block mt-2">Made with <a class="link" href="/box">Terminal</a> and Macbook</small>
+</footer>
